Bug 63840 - No text appears in Unity menus on Ubuntu 12.04 LTS
Summary: No text appears in Unity menus on Ubuntu 12.04 LTS
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Björn Michaelsen
URL:
Whiteboard: target:4.2.0 target:4.1.0.0.beta1
Keywords:
: 64829 64839 64844 64861 64865 64896 (view as bug list)
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-04-23 13:26 UTC by Samuel Mehrbrodt
Modified: 2014-05-13 22:59 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Unity Menus defect (100.72 KB, image/png)
2013-04-23 13:26 UTC, Samuel Mehrbrodt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Mehrbrodt 2013-04-23 13:26:17 UTC
Created attachment 78370 [details]
Unity Menus defect

Since a few weeks the menus in my Master build don't work anymore. There is no text in them and nothing happens when I select an entry. See attached screenshot.

I'm on change ID Ic0c538dfad88f850d95f417f2741ef7dba7fc5e4
OS is Ubuntu 12.04 64 bit.
Comment 1 Samuel Mehrbrodt 2013-04-25 09:43:12 UTC
This is concerning Unity only.
I tried the same installation with Gnome 2 and the menus worked fine.
Comment 2 Michael Meeks 2013-04-25 12:42:56 UTC
One for you I guess Bjoern ? :-)
Comment 3 Björn Michaelsen 2013-04-25 13:37:19 UTC
Which version of indicator-appmenu? There have been quite a few regressions (and fixes) in indicator-appmenu for raring ...
Comment 4 Björn Michaelsen 2013-04-25 13:42:52 UTC
Note that at commit 26d092b3635680248f8b176564409e6c0c24bfbf (Fri Apr 19 11:13:05 2013 +0200), unity menus worked just fine here on raring ...
Comment 5 Samuel Mehrbrodt 2013-04-25 13:45:20 UTC
I'm on Precise:

apt-cache policy indicator-appmenu
indicator-appmenu:
  Installiert: 0.3.97-0ubuntu1
  Kandidat:    0.3.97-0ubuntu1
  Versionstabelle:
 *** 0.3.97-0ubuntu1 0
        500 http://de.archive.ubuntu.com/ubuntu/ precise/main amd64 Packages
        100 /var/lib/dpkg/status
Comment 6 Adolfo Jayme Barrientos 2013-05-21 20:06:44 UTC
*** Bug 64829 has been marked as a duplicate of this bug. ***
Comment 7 Samuel Mehrbrodt 2013-05-21 20:08:34 UTC
This is a regression from 4.0.2 to 4.0.3.
Today the Update came on the PPA and it doesn't work anymore. Before I saw this on Master only.
Comment 8 Jorendc 2013-05-21 22:16:02 UTC
*** Bug 64839 has been marked as a duplicate of this bug. ***
Comment 9 eguevara2012 2013-05-22 00:17:54 UTC
Same problem here when update today(2013-05-21) from PPA:

$ libreoffice --version
LibreOffice 4.0.3.3


$ apt-cache policy indicator-appmenu
indicator-appmenu:
  Instalado: 0.3.97-0ubuntu1
  Candidato: 0.3.97-0ubuntu1
  Tabela de versão:
 *** 0.3.97-0ubuntu1 0
        500 http://br.archive.ubuntu.com/ubuntu/ precise/main i386 Packages
        100 /var/lib/dpkg/status

$ lsb_release -a
No LSB modules are available.
Distributor ID:	Ubuntu
Description:	Ubuntu 12.04.2 LTS
Release:	12.04
Codename:	precise


Screenshot: http://imgur.com/XfHfaq5


How to repair  this??
Thanks!
Comment 10 Björn Michaelsen 2013-05-22 04:30:58 UTC
The unity stuff on 12.04 is too old to handle LibreOffice. You need 13.04 for it to work.
Comment 11 Samuel Mehrbrodt 2013-05-22 05:25:11 UTC
Björn, maybe you can just disable Unity integration in the PPA builds for 12.04?
That would help me and others who prefer to stick with LTS versions.

For now I use the packages from libreoffice.org, they have it disabled.
Comment 12 Commit Notification 2013-05-22 05:30:07 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a0850db02a58f14a7fd778814f2be6ced4433022

fdo#63840 lp#1182082: disable internal unity integration against glib<2.36



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Jorendc 2013-05-22 06:52:43 UTC
*** Bug 64844 has been marked as a duplicate of this bug. ***
Comment 14 Jorendc 2013-05-22 07:05:50 UTC
Looks a 4.0.x bug/regression to me, so lets put it on the correct MAB list then.
Comment 15 Commit Notification 2013-05-22 07:39:37 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=da3c2dc8cb1e9d0bce1cc773dda5e1baba08e00d&h=libreoffice-4-1

fdo#63840 lp#1182082: disable internal unity integration against glib<2.36


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Björn Michaelsen 2013-05-22 07:49:27 UTC
reverting to MAB4.1 as this was a 4.0 regression only by a vendor patch -- its not on the upstream branch.
Comment 17 Jorendc 2013-05-22 11:08:37 UTC
*** Bug 64861 has been marked as a duplicate of this bug. ***
Comment 18 Cor Nouws 2013-05-22 12:47:08 UTC
*** Bug 64865 has been marked as a duplicate of this bug. ***
Comment 19 Jorendc 2013-05-23 09:09:47 UTC
*** Bug 64896 has been marked as a duplicate of this bug. ***
Comment 20 eguevara2012 2013-05-23 15:41:15 UTC
The bug is fixed today(2013-05-23) after update from PPA.
Thanks!
Comment 21 Allen 2013-05-23 17:45:02 UTC
2013 May 23: On 2013 May 22, downloaded the updates from the PPA and the text now appears in the Unity menu items on Ubuntu 12.04 LTS.  This issues appears to be resolved.  Thank you!
Comment 22 John Hart 2013-05-23 18:36:34 UTC
I also confirm that the bug has been squashed.  It works now. Thanks to who ever made the corrections.
Comment 23 jk 2014-05-13 20:07:29 UTC
Unfortunately it's not still solved, because on Arch it doesn't work as well. I've got Arch with Awesome (I tried it even with LXDE with the same result), LO 4.2.4.2. On the same computer it work well with Debian. The problem is same, the drop-down menu doesn't work.
Comment 24 Björn Michaelsen 2014-05-13 22:59:03 UTC
Reclosing. I assume you are not using the Dbus-export for Unity on Awesome/LXDE, thus this is a different issues => Please file a new bug.

Also not that as you note, this works fine on Debian, so its not an upstream bug => probably better to file that one against your distro.