fdo#63840 lp#1182082: disable internal unity integration against glib<2.36

* that is: use internal unity integration from Ubuntu 13.04 raring
  upwards only

Change-Id: I08b9d950245b21e8d92c1e76905d53e97afdf685