vcl/inc/unx/gtk/gtksalmenu.hxx
@@ -19,7 +19,7 @@
 #include <unx/gtk/gtkframe.hxx>
 
 #if defined(ENABLE_DBUS) && defined(ENABLE_GIO) && \
-    (GLIB_MAJOR_VERSION > 2 || GLIB_MINOR_VERSION >= 32)
+    (GLIB_MAJOR_VERSION > 2 || GLIB_MINOR_VERSION >= 36)
 #  define ENABLE_GMENU_INTEGRATION
 #  include <unx/gtk/glomenu.h>
 #  include <unx/gtk/gloactiongroup.h>
